--- a/weather.html
+++ b/weather.html
@@ -1,6 +1,7 @@
 <html>
+<base href="/">
 <body>
-<form action ="http://127.0.0.1:5000/process_get" method="GET">
+<form action ="http:/process_get" method="GET">
 <input type ="submit" value = "Weather_Detail">
 </form>
 </body>
