--- a/weather.html
+++ b/weather.html
@@ -1,7 +1,7 @@
 <html>
 <base href="/">
 <body>
-<form action ="http:/process_get" method="GET">
+<form method="GET">
 <input type ="submit" value = "Weather_Detail">
 </form>
 </body>
