--- a/weather.html
+++ b/weather.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<form method="GET">
+<form action ="http://10.110.7.166:5000/process_get" method="GET">
 <input type ="submit" value = "Weather_Detail">
 </form>
 </body>
